# adventofcode

./: .gitignore  Dockerfile  Justfile  README.md  bench.py  environment.yml  pyproject.toml  work.py
2015/01/: solve.jl  solve.py
2015/02/: solve.jl  solve.py
2015/03/: solve.jl  solve.py
2015/04/: solve.jl  solve.py
2015/05/: solve.jl  solve.py
2015/06/: solve.jl  solve.py
2015/07/: solve.jl  solve.py
2015/08/: solve.jl  solve.py
2015/09/: solve.jl  solve.py
2015/10/: solve.jl  solve.py
2015/11/: solve.jl  solve.py
2015/12/: solve.jl  solve.py
2015/13/: solve.jl  solve.py
2015/14/: solve.py
2015/15/: solve.py
2020/01/: solve.py
2020/02/: solve.py
2020/03/: solve.py
2020/04/: solve.py
2020/05/: solve.py
2020/06/: solve.py
2020/07/: Untitled.ipynb  solve.py
2020/08/: solve.ipynb
2020/09/: solve.ipynb
2020/10/: solve.ipynb
2020/11/: solve.ipynb
2020/12/: solve.ipynb
2020/13/: solve.ipynb
2020/14/: solve.ipynb
2020/15/: solve.ipynb
2020/16/: solve.ipynb
2020/17/: solve.ipynb
2020/18/: solve.ipynb  solve2.ipynb
2020/19/: solve.ipynb
2020/20/: solve.ipynb
2020/21/: solve.ipynb
2020/22/: solve.ipynb
2020/23/: solve.ipynb
2020/24/: solve.ipynb
2020/25/: solve.ipynb
2021/01/: solve.py
2021/02/: solve.py
2021/03/: solve.ipynb  solve.jl  solve.py
2021/04/: solve.py  solve_v2.py
aoc/: __init__.py  array.py  directions.py  display.py  lattice_geometry.py  number_words.py  parse.py  solution_patterns.py
leaderboard/: aoc_api.py  download.py  leaderboard.py  top_100.py
template/: solve.py
(+118 files in other folders)
